--- a/github-readme-generator/package.json
+++ b/github-readme-generator/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@tailwindcss/cli": "^4.1.8",
     "devicon": "^2.16.0",
     "file-saver": "^2.0.5",
